Fix sidebar offset and toggle offscreen issue

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -71,7 +71,12 @@ body {
 .sidebar-toggle-wrapper {
   background-color: transparent;
   margin: .5em;
+  position: fixed;
   z-index: 1000010;
+}
+
+.sidebar {
+  top: 70px;
 }
 
 .wrapper {
